# compilertools

./: .appveyor.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  LICENSE  appveyor.yml  compilertools.7z  lint  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: documentation.yml  tests.yml
compilertools/: __init__.py  _config.py  _config_build.py  _core.py  _src_files.py  _utils.py  _version.py  build.py  imports.py
compilertools/compilers/: __init__.py  _core.py  gcc.py  llvm.py  msvc.py
compilertools/processors/: __init__.py  _core.py  amd64.py  x86.py  x86_32.py  x86_64.py
doc/: Makefile  api.rst  api_build.rst  api_compilers.rst  api_compilers_gcc.rst  api_compilers_llvm.rst  api_compilers_msvc.rst  api_imports.rst  api_processors.rst  api_processors_x86_32.rst  api_processors_x86_64.rst  changes.rst  conf.py  getting_started.rst  index.rst  library_use.rst  make.bat
tests/: __init__.py  test___init__.py  test__config.py  test__config_build.py  test__core.py  test__src_files.py  test__utils.py  test__version.py  test_build.py  test_compilers__core.py  test_compilers_gcc.py  test_compilers_llvm.py  test_compilers_msvc.py  test_imports.py  test_processors__core.py  test_processors_x86.py  test_processors_x86_32.py  test_processors_x86_64.py  test_real_conditions.py
